### 14-Sep-2023 - MDD - Version 10.4.0 
    Implementation of the "Parallel and Serial CTE correction". This
    version of the CTE correction (Version 3) is based upon the 
    algorithm of Version 2, but includes the additional correction
    for the serial direction which is amp-dependent.  Previous 
    generations of CTE correction are no longer supported, and obsolete
    code has been removed. Note the PCTETAB has changed substantially 
    to accommodate the amp-dependent serial corrections.

### 08-Feb-2022 - MDD - Version 10.3.5   
    Update to the cosmic ray rejection algorithm as to the way
    the output ERR extension is computed for the CRJ file. The 
    output ERR is now propagated from the usable input ERR extensions
    versus being computed by a model.

### 11-Jan-2022 - MDD - Version 10.3.4   
    Fixed a bug which was triggered ONLY when executing the condaforge
    distribution on MacOS where failure was due to a missing return 
    statement.  Only call computeDarktime() once to compute the updated
    DARKTIME primary keyword and function return is now void. Update
    the keyword in main to avoid passing extra data by reference.

### 24-May-2021 - MDD - Version 10.3.3
    Fixed a bug associated with the FLASHDUR computation.  The FLASHDUR
    keyword was updated in the CRJ/CRC headers to be the sum of
    the individual input images as this keyword is used in ACS2D to
    scale the flash reference file for flash correction.  Fixed a bug
    associated with the DARKTIME computation.  Code written for CALACS
    10.2.2 was moved from ACS2D to ACSCCD so every BLV_TMP file has the
    correct DARKTIME keyword value.  Also, the DARKTIME keyword was updated
    in the CRJ/CRC headers to be the sum of the individual input images. Only
    the DARKTIME value in the input file header is used to scale the dark
    reference file for the dark correction.

### 26-Apr-2021 - MDD - Version 10.3.2