@@ -1,10 +1,11 @@
- 14-Sep-2023   CALACS 10.4.0 Implementation of the "Parallel and Serial CTE correction". This
+ 07-May-2024   CALACS 10.4.0 Implementation of the "Parallel and Serial CTE correction". This
                              version of the CTE correction (Version 3) is based upon the 
                              algorithm of Version 2, but includes the additional correction
                              for the serial direction which is amp-dependent.  Previous 
                              generations of CTE correction are no longer supported, and
                              obsolete code has been removed.  Note the PCTETAB has changed
                              substantially to accommodate the amp-dependent serial corrections.
+                             The serial CTE correction only applies to post-SM4 data.
  08-Feb-2022   CALACS 10.3.5 Update to the cosmic ray rejection algorithm as to the way
                              the output ERR extension is computed for the CRJ file. The 
                              output ERR is now propagated from the usable input ERR extensions
