@@ -1,4 +1,4 @@
-### 14-Sep-2023 - MDD - Version 10.4.0 
+### 07-May-2024 - MDD - Version 10.4.0 
     Implementation of the "Parallel and Serial CTE correction". This
     version of the CTE correction (Version 3) is based upon the 
     algorithm of Version 2, but includes the additional correction
@@ -6,6 +6,7 @@
     generations of CTE correction are no longer supported, and obsolete
     code has been removed. Note the PCTETAB has changed substantially 
     to accommodate the amp-dependent serial corrections.
+    The serial CTE correction only applies to post-SM4 data.
 
 ### 08-Feb-2022 - MDD - Version 10.3.5   
     Update to the cosmic ray rejection algorithm as to the way
